Scheduler system added

--- a/templates/Moods.html
+++ b/templates/Moods.html
@@ -163,7 +163,7 @@
                 <br>
                 <div id='add_schedule'>
                 <div id='scheduling1'> </div>
-                <button ><b>Self Schedule</b></button>
+                <button onclick="self_scheduler()" ><b>Self Schedule</b></button>
                 </div>
             <div class='scheduling' id='scheduling'>
             </div>
